traefik-dashboard/service-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-log-dashboard-agent
spec:
  selector: { app: traefik-log-dashboard-agent }
  ports:
    - name: http
      port: 5000
      targetPort: http
