traefik-dashboard/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-log-dashboard
spec:
  selector: { app: traefik-log-dashboard }
  ports:
    - name: http
      port: 3000
      targetPort: http
