traefik-dashboard/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-local-ingress
  namespace: traefik-dashboard
spec:
  ingressClassName: nginx-lan
  tls:
  - hosts:
    - traefik.hejlepi.local
    secretName: hejlepi-local-tls
  rules:
  - host: traefik.hejlepi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-log-dashboard
            port:
              number: 3000
